--- a/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
+++ b/Source/HackathonWeb/HackathonWeb/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div id="app" class="main-app-container">
-    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodeMonkey @@ 2018 Hackthon</span><small> ( {{ currentPosition.latitude }} | {{ currentPosition.longitude }} )</small></div>
+    <div class="app-title"><span class="app-tag-line">{{ tagLine }}. CodEMONkEY @@ 2018 Hackthon</span><small> ( {{ currentPosition.latitude }} | {{ currentPosition.longitude }} )</small></div>
     
 
 
@@ -30,7 +30,7 @@
             <span class="nav-button"><router-link to="/metro">Metro</router-link></span>
             <span class="nav-button"><router-link to="/taxi">Taxi</router-link></span>
             <span class="nav-button"><router-link to="/hotel">Hotel</router-link></span>
-            <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span>
+            @* <span class="nav-button"><router-link to="/feedback">Feedback</router-link></span> *@
             <span class="nav-button"><router-link to="/restaurant">Restaurant</router-link></span>
         </div>
 
